Fix prompt misalignment

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
 
 .prompt {
     margin-right: 5px;
+    margin-top: 1px;
 }
 
 input {
